--- a/mod2_solution/css/mod2_solution.css
+++ b/mod2_solution/css/mod2_solution.css
@@ -1,6 +1,7 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
   margin-bottom: 15px;
@@ -9,14 +10,20 @@ h1 {
 body {
   width: calc(100%);
   margin: 0px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 p {
   background-color: #989898;
   margin-right: auto;
   margin-left: auto;
-  font-family: Helvetica;
   color: black;
+}
+/* Styling for h1 tag */
+h1.main_title{
+  text-align: center;
+  font-size: 175%
 }
 
 /* Styling for h1 tag */
@@ -28,6 +35,20 @@ h1.title {
   margin-bottom: 10px;
   padding-right: 10px;
   padding-left: 10px;
+  font-size: 125%
+}
+
+.Chicken {
+  background-color:#db9095;
+  color:black;
+}
+.Beef {
+  background-color:#c92e40;
+  color:white;
+}
+.Sushi {
+  background-color:#e2d792;
+  color:black;
 }
 
 /* Styling for text */
@@ -36,11 +57,15 @@ p.lorem {
   clear: both;
   padding-right: 10px;
   padding-left: 10px;
+  font-size: 100%
 }
 
+background-color:#c92e40; color:white
+background-color:#e2d792; color:black
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
+  font-size: 100%
 }
 
 /* wrapper div*/
@@ -48,6 +73,7 @@ div.wrap {
   border: 2px solid black;
   width: 100%;
   background-color: #989898;
+  font-size: 100%
 } 
 
 /********** Large devices only **********/
@@ -59,6 +85,7 @@ div.wrap {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: white;
+    font-size: 100%
   }
   .col-lg-1 {
     width: 8.33%;
@@ -107,6 +134,7 @@ div.wrap {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: white;
+    font-size: 100%
   }
   .col-md-1 {
     width: 8.33%;
@@ -155,6 +183,7 @@ div.wrap {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: white;
+    font-size: 100%
   }
   .col-sm-1 {
     width: 8.33%;
